# transcribr

./: .editorconfig  .gitignore  .prettierrc  CLAUDE.md  LICENSE  Makefile  PLAN.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  vitest.config.ts
.claude/skills/icon/: SKILL.md
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
scripts/: generate-icon.py
src/: App.tsx  index.css
src-tauri/: Cargo.toml  audit.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  lib.rs  main.rs  models.rs  state.rs
src-tauri/src/commands/: diarization.rs  mod.rs  notes.rs  settings.rs  transcription.rs
src-tauri/src/utils/: audio.rs  lock.rs  mod.rs
src/api/: diarization.ts  notes.ts  settings.ts  transcription.ts
src/components/: AudioPlayer.tsx  TranscriptionProgress.tsx  UploadDialog.tsx
src/components/notes/: FullTextEditor.tsx  NoteCard.tsx  NotesList.tsx  SegmentList.tsx
src/components/settings/: DiarizationSettings.tsx  LanguageSettings.tsx  WhisperSettings.tsx
src/components/ui/: Button.tsx  Card.tsx  Dialog.tsx  Input.tsx  ProgressBar.tsx  Select.tsx  Spinner.tsx
src/contexts/: SettingsContext.tsx  ToastContext.tsx
src/hooks/: useNotes.ts  useTranscription.ts
src/test/: setup.ts
src/types/: index.ts
src/utils/: segmentSync.test.ts  segmentSync.ts
src/views/: NoteDetailView.tsx  NotesListView.tsx  SettingsView.tsx
