[package]
name = "transcribr"
version = "0.1.0"
description = "Voice note transcription app using Whisper"
authors = ["Marcin Baniowski"]
edition = "2021"

[lib]
name = "transcribr_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }
tokio = { version = "1", features = ["full"] }
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
whisper-rs = { version = "0.14", features = ["metal"] }
hound = "3.5"
futures-util = "0.3"
thiserror = "1.0"
symphonia = { version = "0.5", features = ["mp3", "aac", "isomp4"] }
